<resources>
    <string name="app_name">Flashlight</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="purple">Purple</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="gray">Gray</string>
    <string name="aqua">Aqua</string>
</resources>