<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainArea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:background="@color/white"
    >

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:padding="2dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/whiteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/white"
                android:contentDescription="@string/white"
                android:onClick="onClickWhite"
                tools:ignore="UsingOnClickInXml" />
            <Button
                android:id="@+id/redButton"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_marginStart="10dp"
                android:text = "@string/red"
                android:contentDescription="@string/red"
                android:onClick="onClickRed"
                tools:ignore="UsingOnClickInXml" />
            <Button
                android:id="@+id/blueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/blue"
                android:contentDescription="@string/blue"
                android:onClick="onClickBlue"
                tools:ignore="UsingOnClickInXml" />
            <Button
                android:id="@+id/greenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/green"
                android:contentDescription="@string/green"
                android:onClick="onClickGreen"
                tools:ignore="UsingOnClickInXml" />
            <Button
                android:id="@+id/purpleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/purple"
                android:contentDescription="@string/purple"
                android:onClick="onClickPurple"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>